--- a/public/assests/localization/en/translation.json
+++ b/public/assests/localization/en/translation.json
@@ -23,7 +23,7 @@
     "october":"October",
     "Location":"Location",
     "Contact":"Contact",
-    "Address":"Peskales's Clinic Address",
+    "Address":"Peskales's Clinic Addresses",
     "name1":"Dr. Ashraf Peskales",
     "name2":"Dr. Nevine Adly",
     "name3":"Dr. Tony Peskales",
