--- a/public/assests/localization/en/translation.json
+++ b/public/assests/localization/en/translation.json
@@ -4,7 +4,7 @@
     "variable": " it has been {{number}} since your last visit",
     "button_Text": "عربي",
     "point1":"Head of physical therapy department at Bmhan & Alraae Alsaleeh hospitals - Shobra.",
-    "point2":"The Anglo American in Al Jazeera, Cairo Center for liver diseases, the English Medical Center in Al Zabkya and the Coptic Hospital.",
+    "point2":"The Anglo American Hospital in Al Jazeera, Cairo Center for liver diseases, the English Medical Center in Al Zabkya and the Coptic Hospital.",
     "point3":"Formerly at salaam hospital in Mohandeseen and Greek Community Hospital.",
     "point4":"American Physical Therapy Association member.",
     "point5":"Middle Eastern Alternat Medicine Association member.",
