--- a/public/assests/localization/ar/translation.json
+++ b/public/assests/localization/ar/translation.json
@@ -1,9 +1,10 @@
 {
-    "app_title":"عيادة بسكالس",
+    "app_title":"عيادات بسكالس",
     "Welcome_to_React": "Bienvenue à React et react-i18next",
     "variable": " it has been {{number}} since your last visit",
     "button_Text": "EN",
-    "point1":"رئيس قسم العلاج الطبيعى بمستشفيات بمهان و الراعي الصالح بشبرا و زائر بالمستشفيات",
+    "point1":"رئيس قسم العلاج الطبيعى بمستشفيات بمهان و الراعي الصالح بشبرا",
+    "point7":"و زائر بالمستشفيات",
     "point2":"الأنجلو أميركان بالجزيرة و مركز القاهرة لأمراض الكلى و المركز الطبى الأنجيلى بالأزبكية و المستشفى القبطى ",
     "point3":"و سابقآ مستشفى السلام بالمهندسين و المستشفى اليونانى",
     "point4":"عضو الجمعية الأمركية للعلاج الطبيعى و التأهيل",
@@ -17,13 +18,14 @@
     "Address2Number":"F117",
     "Address2":"مول هال تاون الطبي – بالم هيلز- عيادة ",
     "number1":"۰۱۲-۸۸۳۸-۸۸۸۹",
-    "number2":"۰۱۲-۱۰۱۰-۱۹۷٤",
+    "number2":"۰۱۲۱۰۱۰۱۹۷٤",
+    "number3":"۰۱۲۱۰۱۰۱۹۷٤",
     "mohandeseen":"المهندسين",
     "october":"أكتوبر",
     "about":"معلومات عنا",
     "Location":"الفروع",
     "Contact":"اتصل بنا",
-    "Address":"عنوان عيادة بسكالس",
+    "Address":"عنوان عيادات بسكالس",
     "name1":"أ. د. أشرف بسكالس",
     "name2":"د. توني بسكالس",
     "name3":"أ. د. نيفين بسكالس",
