--- a/public/assests/localization/en/translation.json
+++ b/public/assests/localization/en/translation.json
@@ -1,10 +1,11 @@
     {
-    "app_title":"Peskales's Clinic",
+    "app_title":"Peskales's Clinics",
     "Welcome_to_React": "Welcome to React and react-i18next curt",
     "variable": " it has been {{number}} since your last visit",
     "button_Text": "عربي",
-    "point1":"Head of physical therapy department at Bmhan & Alraae Alsaleeh hospitals - Shobra.",
-    "point2":"The Anglo American Hospital in Al Jazeera, Cairo Center for liver diseases, the English Medical Center in Al Zabkya and the Coptic Hospital.",
+    "point1":"Head of physical therapy department at Behman & Good Shepherd hospitals - Shobra.",
+    "point7":"Visitor at the following hospitals",
+    "point2":"The Anglo American Hospital in Al Jazeera, Cairo Center for kidney diseases, the English Medical Center in Al Zabkya and the Coptic Hospital.",
     "point3":"Formerly at salaam hospital in Mohandeseen and Greek Community Hospital.",
     "point4":"American Physical Therapy Association member.",
     "point5":"Middle Eastern Alternat Medicine Association member.",
@@ -18,12 +19,13 @@
     "Address2":"Clinic F117 - Hale Town Medical Mall - Palm Hills - 6th of October City",
     "number1":"012-8838-8889",
     "number2":"012-1010-1974",
+    "number3":"012-8838-8889",
     "about":"About",
     "mohandeseen":"Mohandessin",
     "october":"October",
     "Location":"Location",
     "Contact":"Contact",
-    "Address":"Peskales's Clinic Addresses",
+    "Address":"Peskales's Clinics Addresses",
     "name1":"Dr. Ashraf Peskales",
     "name2":"Dr. Nevine Adly",
     "name3":"Dr. Tony Peskales",
