--- a/public/assests/localization/ar/translation.json
+++ b/public/assests/localization/ar/translation.json
@@ -25,7 +25,7 @@
     "about":"معلومات عنا",
     "Location":"الفروع",
     "Contact":"اتصل بنا",
-    "Address":"عنوان عيادات بسكالس",
+    "Address":"عناوين عيادات بسكالس",
     "name1":"أ. د. أشرف بسكالس",
     "name2":"د. توني بسكالس",
     "name3":"أ. د. نيفين بسكالس",
