--- a/public/assests/localization/ar/translation.json
+++ b/public/assests/localization/ar/translation.json
@@ -15,6 +15,7 @@
     "logoImage":"ArLogo",
     "Address1":" شارع البطل أحمد عبد العزيز",
     "Address1Number":"۲۰",
+    "Address4Number":"۲۰",
     "Address2Number":"F117",
     "Address2":"مول هال تاون الطبي – بالم هيلز- عيادة ",
     "number1":"۰۱۲-۸۸۳۸-۸۸۸۹",
@@ -29,7 +30,18 @@
     "name1":"أ. د. أشرف بسكالس",
     "name2":"د. توني بسكالس",
     "name3":"أ. د. نيفين بسكالس",
-    "name4":"د. آيلونا بسكالس",
-    "physicalTherapy":"العلاج الطبيعى"
+    "name4":"د. إيلونا بسكالس",
+    "physicalTherapy":"العلاج الطبيعى",
+    "spec0":"تخصصنا",
+    "spec1":"موجات تصادمية",
+    "spec2":"علاج يدوي",
+    "spec3":"علاج بالليزر العميق",
+    "spec4":"مساج الجهاز الليمفاوي",
+    "spec5":"علاج اصابات الملاعب",
+    "spec6":"علاج كهربائي",
+    "spec7":"تأهيل قبل و بعد العمليات الجراحية",
+    "spec8":"",
+    "spec9":"متخصصون في حالات الاعصاب و العظام و العمود الفقري"
+
 
   }
