--- a/public/assests/localization/en/translation.json
+++ b/public/assests/localization/en/translation.json
@@ -30,7 +30,17 @@
     "name2":"Dr. Nevine Adly",
     "name3":"Dr. Tony Peskales",
     "name4":"Dr. Ilona Peskales",
-    "physicalTherapy":"Physical Therapy"
+    "physicalTherapy":"Physical Therapy",
+    "spec0":"Our Specialties",
+    "spec1":"Shockwave Therapy",
+    "spec2":"Manual Therapy",
+    "spec3":"Deep LASER Therapy",
+    "spec4":"Lymph Drainage Massage",
+    "spec5":"Sports injuries",
+    "spec6":"Electro Therapy",
+    "spec7":"Pre and post operative",
+    "spec8":"Rehabilitation ",
+    "spec9":"Specialists in Orthopedic Neurological Spine Problems"
 
 
 
