--- a/public/assests/localization/en/translation.json
+++ b/public/assests/localization/en/translation.json
@@ -25,7 +25,7 @@
     "october":"October",
     "Location":"Location",
     "Contact":"Contact",
-    "Address":"Peskales's Clinics Addresses",
+    "Address":"Peskales Clinics Addresses",
     "name1":"Dr. Ashraf Peskales",
     "name2":"Dr. Nevine Adly",
     "name3":"Dr. Tony Peskales",
