--- a/public/assests/localization/ar/translations.json
+++ b/public/assests/localization/ar/translations.json
@@ -1,5 +1,6 @@
 {
     "app_title":"عيادات بسكالس",
+    "app_titles":"عيادات بسكالس",
     "Welcome_to_React": "Bienvenue à React et react-i18next",
     "variable": " it has been {{number}} since your last visit",
     "button_Text": "EN",
@@ -25,7 +26,7 @@
     "october":"أكتوبر",
     "about":"معلومات عنا",
     "Location":"الفروع",
-    "Contact":"اتصل بنا",
+    "Contact":"تخصصنا",
     "Address":"عناوين عيادات بسكالس",
     "name1":"أ. د. أشرف بسكالس",
     "name2":"د. توني بسكالس",
@@ -40,8 +41,7 @@
     "spec5":"علاج اصابات الملاعب",
     "spec6":"علاج كهربائي",
     "spec7":"تأهيل قبل و بعد العمليات الجراحية",
-    "spec8":"",
-    "spec9":"متخصصون في حالات الاعصاب و العظام و العمود الفقري"
+    "spec8":"متخصصون في حالات الاعصاب و العظام و العمود الفقري"
 
 
   }
