--- a/public/assests/localization/ar/translations.json
+++ b/public/assests/localization/ar/translations.json
@@ -30,7 +30,7 @@
     "Address":"عناوين عيادات بسكالس",
     "name1":"أ. د. أشرف بسكالس",
     "name2":"د. توني بسكالس",
-    "name3":"أ. د. نيفين بسكالس",
+    "name3":"أ. د. نيفين عدلي",
     "name4":"د. إيلونا بسكالس",
     "physicalTherapy":"العلاج الطبيعى",
     "spec0":"تخصصنا",
